@@ -120,3 +120,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20031017 rzx.c: write RZX version number as 0.12 (as opposed to 0.13) if
 	 we're not signing the data.
 20031019 Transparent reading of gzipped files.
+20031019 libspectrum.c: better chance of compiling if zlib not available.
